[gd_scene format=3]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource(1)

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]

[node name="GlobalStatsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]

[node name="YearLabel" type="Label" parent="MarginContainer/VBoxContainer/GlobalStatsPanel"]
text = "Year: 0"
[node name="HealthScoreLabel" type="Label" parent="MarginContainer/VBoxContainer/GlobalStatsPanel"]
text = "Health: 100.0"
[node name="CO2LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/GlobalStatsPanel"]
text = "CO2: 400.0 ppm"

[node name="ActionPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ActionPanel"]

[node name="ReforestButton" type="Button" parent="MarginContainer/VBoxContainer/ActionPanel/HBoxContainer"]
text = "Reforest"

[node name="EventPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]

[node name="EventTitleLabel" type="Label" parent="MarginContainer/VBoxContainer/EventPanel"]
[node name="EventDescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer/EventPanel"] 